[package]
name = "anyhow-std"
version = "0.1.4"
description = "Wrap std APIs with anyhow error context."
homepage = "https://github.com/nathan-at-least/anyhow-std"
repository = "https://github.com/nathan-at-least/anyhow-std.git"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
derive_more = "0.99.17"

[dev-dependencies]
tempfile = "3.5.0"
test-case = "3.0.0"
